# JobPilot_AI

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
data/: sample_resume.json
src/jobpilot/: config.py  models.py
src/jobpilot/cover_letter/: generator.py
src/jobpilot/db/: repo.py  schema.sql
src/jobpilot/llm/: client.py  prompts.py  retry.py  schemas.py
src/jobpilot/pdf/: generator.py
src/jobpilot/resume/: loader.py  tailor.py
src/jobpilot/scrapers/: arbeitnow.py  base.py  greenhouse.py  lever.py  orchestrator.py  remotive.py  workable.py
src/jobpilot/services/: graphs.py  pipeline.py
src/jobpilot_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_models_validation.py  test_orchestrator.py  test_pdf.py  test_pipeline_integration.py  test_repo.py  test_tailor_guardrails.py
