[project]
name = "jobpilot-ai"
version = "0.1.0"
description = "Local-first AI job search automation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.42.0",
  "litellm>=1.61.0",
  "boto3>=1.35.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.0",
  "langgraph>=0.2.50",
  "tenacity>=9.0.0",
  "reportlab>=4.2.0",
  "pypdf>=5.1.0",
  "pytest>=8.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
